# ssh-moduli-builder

./: CHANGELOG.rst  CONFIG_MANAGER.rst  DEV.md  Documentation.md  LICENSE.md  MODULI_ASSEMBLY.rst  ModuliAssembly.md  PythonPackaging.md  QUICKSTART.md  QuickStart.md  RATIONALE.md  README.md  TLDR.md  changelog.md  changelog.rst  conf.py  index.rst  moduli_assembly.rst  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config_manager/: __init__.py
data/: build_moduli_file.csh  build_moduli_file.sh
moduli_assembly/: ModuliAssembly.py  __init__.py  __main__.py  moduli_assembly.py  moduli_assembly_conf.py
moduli_assembly/config_manager/: __init__.py  config_manager.py
moduli_assembly/scripts/: build_moduli_file_csh.py  build_moduli_file_sh.py  export_bash_builder.py  export_bash_runner.py  export_csh_builder.py  export_moduli_infile.py  export_moduli_infile_script.py  exports.py  moduli_infile.py
test/: TestLoadConf.py  test_ModuliAssembly.py  test_moduli_assembly.py
test/config_manager/: __init__.py  test_config_manager.py
test/moduli_assembly/: __init__.py  __init__2.py  __main__.py
test/moduli_assembly/scripts/: export_bash_builder.py
