[tool.poetry]
name = "moduli_assembly"
dynamic = ["version"]
#version = "0.10.7"
description = "Command Line Utility to build complete [/usr/local]/etc/ssh/moduli_file"
authors = ["Ron Williams <becker.wiliams@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "moduli_assembly" },
	{ include = "moduli_assembly/scripts" },
	{ include = "config_manager" }
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/beckerwilliams/ssh-moduli-builder"
Documentation = "https://github.com/beckerwilliams/ssh-moduli-builder/README.md"
Repository = "https://github.com/beckerwilliams/ssh-moduli-builder.git"
Issues = "https://github.com/beckerwilliams/ssh-moduli-builder/issues"
